# langnet-spec

./: .gitignore  .gitmodules  README.md  build.zig  build.zig.zon  devenv.nix  devenv.yaml  justfile  pyproject.toml
examples/: python_writer.py  python_writer.py.new  zig_reader.zig
schema/: cdsl_spec.proto  diogenes_spec.proto  example.proto  heritage_spec.proto  langnet.proto  langnet_spec.proto  query_spec.proto  whitakers_spec.proto
src/: main.zig
