[project]
name = "langnet-spec"
version = "0.1.0"
description = "python protobuf gencode"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "betterproto2-compiler>=0.3.0",
    "betterproto>=1.2.5",
    "ruff", # explicit so we pick up our static shim
]

[tool.uv.sources]
ruff = { path = "vendor/ruff-shim" }
